--- a/style.css
+++ b/style.css
@@ -27,9 +27,14 @@
   height: 50%;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotate(-90deg);
   pointer-events: none;
 }
+
+.player-container svg circle {
+  transition: all 0.2s ease-in-out;
+}
+
 /*.time-select {*/
 /*  background: lightblue;*/
 /*}*/
@@ -50,7 +55,7 @@
   color: lightpink;
 }
 
-.vid-container {
+video {
   position: fixed;
   top: 0;
   left: 0;
@@ -82,14 +87,11 @@
   padding: 30px;
 }
 
- .sound-picker button:hover {
-   color: black;
-   background: lightpink;
- }
+.sound-picker button:hover {
+  color: black;
+  background: lightpink;
+}
 
 .sound-picker button img {
   height: 100%;
 }
-
-
-
